<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/shape_list_item_state"
    android:layout_marginBottom="5dp">

    <!--Email-->
    <TextView
        android:id="@+id/txtUserList_customEmail"
        android:text="@string/text_user_list_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_black"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/txtUserList_customImage"
        android:layout_below="@id/txtUserList_customEmail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_holo_user_name"/>

    <!--User Name-->
    <TextView
        android:id="@+id/txtUserList_customUserName"
        style="@style/TextTitleStyle"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_toRightOf="@id/txtUserList_customImage"
        android:layout_below="@id/txtUserList_customEmail"
        android:text="@string/text_user_list_title_user_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"/>

    <!--Position-->
    <TextView
        android:id="@+id/txtUserList_customPosition"
        style="@style/TextTitleStyle"
        android:textStyle="normal"
        android:textSize="14sp"
        android:layout_toRightOf="@id/txtUserList_customImage"
        android:layout_below="@id/txtUserList_customUserName"
        android:text="@string/text_user_list_title_position"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>


</RelativeLayout>